<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registro">

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="331dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:hint="@string/etUsuario"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="331dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/etEmail"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsuario" />

    <EditText
        android:id="@+id/txtTwitter"
        android:layout_width="331dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/etTwitter"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="331dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/etTelefono"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTwitter" />

    <EditText
        android:id="@+id/txtFe"
        android:layout_width="331dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/etFecha"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefono" />

    <Button
        android:id="@+id/button2"
        android:layout_width="177dp"
        android:layout_height="60dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:onClick="Guardar"
        android:text="@string/btnGuardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFe" />
</androidx.constraintlayout.widget.ConstraintLayout>